More xgboost + added logreg

--- a/features/notebooks/20180709_ovr_try_3.ipynb
+++ b/features/notebooks/20180709_ovr_try_3.ipynb
@@ -3089,9 +3089,9 @@
     "        + geom_hline(yintercept=-1, color='lightgrey')  # -1 is the max score (1 is the min coverage_error)\n",
     "        + geom_point(data=df[df.split == 'test'], shape='o', fill='none', size=2)\n",
     "        + geom_point(data=df[df.split == 'train'], shape='x', size=2)\n",
-    "        # + geom_line(aes(group='str(group) + str(fold)'), alpha=.2)  # More trouble than it's worth\n",
+    "        # + geom_line(aes(group='str(group) + str(fold)'), alpha=.2)  # Low ROI\n",
     "        + stat_summary(aes(group='group'), fun_data='mean_cl_boot', random_state=0, geom='errorbar')\n",
-    "        # + stat_summary(aes(group='group'), fun_data='mean_cl_boot', random_state=0, geom='line', size=1)  # More trouble than it's worth\n",
+    "        # + stat_summary(aes(group='group'), fun_data='mean_cl_boot', random_state=0, geom='line', size=1)  # Low ROI\n",
     "        + scale_color_cmap_d(mpl_cmap_concat('tab20', 'tab20b', 'tab20c'))\n",
     "        + coord_flip(\n",
     "            ylim=(-30, 0),\n",
@@ -3591,9 +3591,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
