--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -786,6 +786,110 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "33066223"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/plain": "8831779"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/plain": "[28, 28, 6, 12, 12, 8831700, 4]"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    }
+   ],
+   "source": [
+    "from notebooks import *\n",
+    "ret = joblib.load(f\"{artifact_dir}/20180709-211727-fd34af5-ovr_try_2/split_i=0,train=2688,test=672,classes=168,estimator=Search(n_species=168,n_recs=1.0,classifier='cls=xgbm,n_estimators=100,max_depth=100',random_state=0)/ret.pkl\")\n",
+    "estimator = joblib.load(f\"{artifact_dir}/20180709-211727-fd34af5-ovr_try_2/split_i=0,train=2688,test=672,classes=168,estimator=Search(n_species=168,n_recs=1.0,classifier='cls=xgbm,n_estimators=100,max_depth=100',random_state=0)/estimator.pkl\")\n",
+    "sizeof = lambda x: len(joblib_dumps(x))\n",
+    "display(\n",
+    "    sizeof(estimator),\n",
+    "    sizeof(ret),\n",
+    "    [sizeof(x) for x in ret],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "time": "3.144s"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "CPU times: user 1.4 s, sys: 37.6 ms, total: 1.44 s\nWall time: 1.44 s\n"
+    },
+    {
+     "data": {
+      "text/plain": "'16.9 MB'"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/plain": "'1.7 MB'"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th>min</th>\n      <th>25%</th>\n      <th>50%</th>\n      <th>75%</th>\n      <th>max</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>dtype</th>\n      <th>sizeof</th>\n      <th>len</th>\n      <th>count</th>\n      <th>nunique</th>\n      <th>mean</th>\n      <th>std</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>type</th>\n      <th>object</th>\n      <th>1142400</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>1</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td><div class=\"not-number\">xgb</div></td>\n    </tr>\n    <tr>\n      <th>n_trees</th>\n      <th>int64</th>\n      <th>470400</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>1</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>16800</td>\n      <td>16800</td>\n      <td>16800</td>\n      <td>16800</td>\n      <td>16800</td>\n    </tr>\n    <tr>\n      <th>tree_i</th>\n      <th>int64</th>\n      <th>470396</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>0</td>\n      <td>4199</td>\n      <td>8399</td>\n      <td>12599</td>\n      <td>16799</td>\n    </tr>\n    <tr>\n      <th>depth</th>\n      <th>int64</th>\n      <th>470392</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>30</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>0</td>\n      <td>5</td>\n      <td>7</td>\n      <td>9</td>\n      <td>100</td>\n    </tr>\n    <tr>\n      <th>node_count</th>\n      <th>int64</th>\n      <th>470400</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>42</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>1</td>\n      <td>17</td>\n      <td>23</td>\n      <td>29</td>\n      <td>221</td>\n    </tr>\n    <tr>\n      <th>leaf_count</th>\n      <th>int64</th>\n      <th>470400</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>42</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>1</td>\n      <td>9</td>\n      <td>12</td>\n      <td>15</td>\n      <td>111</td>\n    </tr>\n    <tr>\n      <th>fork_count</th>\n      <th>int64</th>\n      <th>470392</th>\n      <th>16800</th>\n      <th>16800</th>\n      <th>42</th>\n      <th>NaN</th>\n      <th>NaN</th>\n      <td>0</td>\n      <td>8</td>\n      <td>11</td>\n      <td>14</td>\n      <td>110</td>\n    </tr>\n  </tbody>\n</table>",
+      "text/plain": "                                                          min    25%    50%    75%    max\n           dtype  sizeof  len   count nunique mean std                                   \ntype       object 1142400 16800 16800 1       NaN  NaN    xgb    xgb    xgb    xgb    xgb\nn_trees    int64  470400  16800 16800 1       NaN  NaN  16800  16800  16800  16800  16800\ntree_i     int64  470396  16800 16800 16800   NaN  NaN      0   4199   8399  12599  16799\ndepth      int64  470392  16800 16800 30      NaN  NaN      0      5      7      9    100\nnode_count int64  470400  16800 16800 42      NaN  NaN      1     17     23     29    221\nleaf_count int64  470400  16800 16800 42      NaN  NaN      1      9     12     15    111\nfork_count int64  470392  16800 16800 42      NaN  NaN      0      8     11     14    110"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    },
+    {
+     "data": {
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>n_trees</th>\n      <th>tree_i</th>\n      <th>depth</th>\n      <th>node_count</th>\n      <th>leaf_count</th>\n      <th>fork_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>0</td>\n      <td>7</td>\n      <td>41</td>\n      <td>21</td>\n      <td>20</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>1</td>\n      <td>8</td>\n      <td>21</td>\n      <td>11</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>2</td>\n      <td>4</td>\n      <td>17</td>\n      <td>9</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>3</td>\n      <td>13</td>\n      <td>33</td>\n      <td>17</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>4</td>\n      <td>100</td>\n      <td>207</td>\n      <td>104</td>\n      <td>103</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>5</td>\n      <td>9</td>\n      <td>37</td>\n      <td>19</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>6</td>\n      <td>8</td>\n      <td>27</td>\n      <td>14</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>7</td>\n      <td>9</td>\n      <td>27</td>\n      <td>14</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>8</td>\n      <td>8</td>\n      <td>33</td>\n      <td>17</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>9</td>\n      <td>5</td>\n      <td>17</td>\n      <td>9</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>10</td>\n      <td>5</td>\n      <td>21</td>\n      <td>11</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>11</td>\n      <td>6</td>\n      <td>17</td>\n      <td>9</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>12</td>\n      <td>10</td>\n      <td>41</td>\n      <td>21</td>\n      <td>20</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>13</td>\n      <td>5</td>\n      <td>21</td>\n      <td>11</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>14</td>\n      <td>5</td>\n      <td>19</td>\n      <td>10</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>15</td>\n      <td>9</td>\n      <td>25</td>\n      <td>13</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>16</td>\n      <td>100</td>\n      <td>211</td>\n      <td>106</td>\n      <td>105</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>17</td>\n      <td>10</td>\n      <td>25</td>\n      <td>13</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>18</td>\n      <td>9</td>\n      <td>39</td>\n      <td>20</td>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td><div class=\"not-number\">xgb</div></td>\n      <td>16800</td>\n      <td>19</td>\n      <td>8</td>\n      <td>33</td>\n      <td>17</td>\n      <td>16</td>\n    </tr>\n  </tbody>\n</table>",
+      "text/plain": "   type  n_trees  tree_i  depth  node_count  leaf_count  fork_count\n0   xgb    16800       0      7          41          21          20\n1   xgb    16800       1      8          21          11          10\n2   xgb    16800       2      4          17           9           8\n3   xgb    16800       3     13          33          17          16\n4   xgb    16800       4    100         207         104         103\n5   xgb    16800       5      9          37          19          18\n6   xgb    16800       6      8          27          14          13\n7   xgb    16800       7      9          27          14          13\n8   xgb    16800       8      8          33          17          16\n9   xgb    16800       9      5          17           9           8\n10  xgb    16800      10      5          21          11          10\n11  xgb    16800      11      6          17           9           8\n12  xgb    16800      12     10          41          21          20\n13  xgb    16800      13      5          21          11          10\n14  xgb    16800      14      5          19          10           9\n15  xgb    16800      15      9          25          13          12\n16  xgb    16800      16    100         211         106         105\n17  xgb    16800      17     10          25          13          12\n18  xgb    16800      18      9          39          20          19\n19  xgb    16800      19      8          33          17          16"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "transient": {}
+    }
+   ],
+   "source": [
+    "from notebooks import *\n",
+    "estimator = joblib.load(f\"{artifact_dir}/20180709-211727-fd34af5-ovr_try_2/split_i=0,train=2688,test=672,classes=168,estimator=Search(n_species=168,n_recs=1.0,classifier='cls=xgbm,n_estimators=100,max_depth=100',random_state=0)/estimator.pkl\")\n",
+    "gbm = estimator.classifier_\n",
+    "gbm._Booster.dump_model('/tmp/gbm.txt', with_stats=True)  # Human readable\n",
+    "sizeof = lambda x: len(joblib_dumps(x))\n",
+    "%time stats = model_stats(gbm)\n",
+    "display(\n",
+    "    humanize.naturalsize(sizeof(gbm)),\n",
+    "    humanize.naturalsize(sizeof(stats)),\n",
+    "    df_summary(stats).T,\n",
+    "    stats[:20],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
