Eval logreg vs. xgb

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -891,6 +891,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from notebooks import *\n",
+    "import pprint\n",
+    "(xc.metadata\n",
+    "    [lambda df: pd.notnull(df.species)]\n",
+    "    [lambda df: df.country == 'United States']\n",
+    "    .pipe(df_remove_unused_categories).com_name.sort_values()\n",
+    "    .pipe(puts, f=lambda s: len(s.unique()))\n",
+    "    .pipe(lambda s:\n",
+    "        pprint.pprint(s.unique().tolist(), indent=4, width=120, compact=True)\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
