--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -910,6 +910,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for s in [\n",
+    "    '#             f1-micro    1   .6g  $[   4 /   3]/mo  $[    /   ]/d  $[.008 / .004]/hr',\n",
+    "    '#             g1-small    1  1.7g  $[  13 /   5]/mo  $[    /.17]/d  $[.026 / .007]/hr',\n",
+    "    '#',\n",
+    "    '#         n1-highcpu-2    2    2g  $[  36 /  11]/mo  $[    /   ]/d  $[ .07 /  .02]/hr',\n",
+    "    '#         n1-highcpu-4    4    4g  $[  72 /  22]/mo  $[    /   ]/d  $[ .14 /  .03]/hr',\n",
+    "    '#         n1-highcpu-8    8    7g  $[ 145 /  44]/mo  $[    /   ]/d  $[ .28 /  .06]/hr',\n",
+    "    '#        n1-highcpu-16   16   14g  $[ 290 /  88]/mo  $[    /   ]/d  $[ .57 /  .12]/hr',\n",
+    "    '#        n1-highcpu-32   32   29g  $[ 580 / 175]/mo  $[    /   ]/d  $[1.13 /  .24]/hr',\n",
+    "    '#        n1-highcpu-64   64   58g  $[1159 / 350]/mo  $[    /   ]/d  $[2.27 /  .48]/hr',\n",
+    "    '#        n1-highcpu-96   96   86g  $[1739 / 526]/mo  $[ 82 / 17]/d  $[3.40 /  .72]/hr',\n",
+    "    '#',\n",
+    "    '#        n1-standard-2    2    7g  $[  49 /  15]/mo  $[  5 /  1]/d  $[ .10 /  .02]/hr',\n",
+    "    '#        n1-standard-4    4   15g  $[  97 /  29]/mo  $[  5 /  1]/d  $[ .19 /  .04]/hr',\n",
+    "    '#        n1-standard-8    8   30g  $[ 194 /  58]/mo  $[  9 /  2]/d  $[ .38 /  .08]/hr',\n",
+    "    '#       n1-standard-16   16   60g  $[ 388 / 116]/mo  $[ 18 /  4]/d  $[ .76 /  .16]/hr',\n",
+    "    '#       n1-standard-32   32  120g  $[ 776 / 233]/mo  $[ 36 /  8]/d  $[1.52 /  .32]/hr',\n",
+    "    '#       n1-standard-64   64  240g  $[1553 / 467]/mo  $[ 73 / 16]/d  $[3.04 /  .64]/hr',\n",
+    "    '#       n1-standard-96   96  360g  $[2330 / 700]/mo  $[109 / 23]/d  $[4.56 /  .96]/hr',\n",
+    "    '#',\n",
+    "    '#         n1-highmem-2    2   13g  $[  61 /  18]/mo  $[    /   ]/d  $[ .12 /  .03]/hr',\n",
+    "    '#         n1-highmem-4    4   26g  $[ 121 /  37]/mo  $[    /   ]/d  $[ .24 /  .05]/hr',\n",
+    "    '#         n1-highmem-8    8   52g  $[ 242 /  73]/mo  $[    /   ]/d  $[ .47 /  .10]/hr',\n",
+    "    '#        n1-highmem-16   16  104g  $[ 484 / 146]/mo  $[    /   ]/d  $[ .95 /  .20]/hr',\n",
+    "    '#        n1-highmem-32   32  208g  $[ 968 / 292]/mo  $[    /   ]/d  $[1.89 /  .40]/hr',\n",
+    "    '#        n1-highmem-64   64  416g  $[1936 / 584]/mo  $[    /   ]/d  $[3.79 /  .80]/hr',\n",
+    "    '#        n1-highmem-96   96  624g  $[2904 / 876]/mo  $[    /   ]/d  $[5.68 / 1.20]/hr',\n",
+    "]:\n",
+    "    if s == '#':\n",
+    "        print(s)\n",
+    "    else:\n",
+    "        (desc, dem_m, pre_m, dem_d, pre_d, dem_h, pre_h) = re.match(\n",
+    "            r'(.*?)\\$\\[(.*)/(.*)\\]/mo.*\\$\\[(.*)/(.*)\\]/d.*\\$\\[(.*)/(.*)\\]/hr',\n",
+    "            s,\n",
+    "        ).groups()\n",
+    "        dem_h = float(dem_h.strip())\n",
+    "        pre_h = float(pre_h.strip())\n",
+    "        line = '%s$[%4.0f / %3.0f]/mo  $[%5.1f / %4.2f]/d  $[%4.3f / %4.3f]/hr' % (\n",
+    "            desc,\n",
+    "            dem_h * 24*28, pre_h * 24*28,\n",
+    "            dem_h * 24, pre_h * 24,\n",
+    "            dem_h, pre_h,\n",
+    "        )\n",
+    "        line = re.sub(r'0\\.', ' .', line)\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(map(list, np.array([1,2,4,8])[:,np.newaxis] * np.array([ 230,99, 24*.45,24*.135, .45,.135, ])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
