ebird: species maps + simpler apis

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -921,14 +921,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "# Requires _global env instead of bubo-features env\n",
+    "import feather\n",
+    "import pickle\n",
+    "\n",
+    "cr_birds_dir = Path('~/Desktop/cr_birds').expanduser()\n",
+    "metadata_dir = cr_birds_dir / 'metadata'\n",
+    "downloads_dir = cr_birds_dir / 'downloads'\n",
+    "ebird_barchart_tsv_path = metadata_dir / 'ebird_CR__1900_2018_1_12_barchart.txt'\n",
+    "species_pickle_path = metadata_dir / 'species.pkl'\n",
+    "\n",
+    "with open(species_pickle_path, 'rb') as f:\n",
+    "    species_df = pickle.load(f)\n",
+    "species_df.memory_usage(deep=True).sum()\n",
+    "\n",
+    "species_df.to_feather(metadata_dir / 'species.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "_global (PYTHONSTARTUP)",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "_global (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
