More usable spectro plots, app_ideas notebooks

--- a/features/notebooks/20180524_fit_features.ipynb
+++ b/features/notebooks/20180524_fit_features.ipynb
@@ -880,7 +880,7 @@
    ],
    "source": [
     "with with_figsize(width=25/2, height=212/2):\n",
-    "    plot_many_spectros(t_max=30, recs=(recs\n",
+    "    plot_spectros(t_max=30, recs=(recs\n",
     "        [-50:]  # Avoid heavy plot\n",
     "    ))"
    ]
