--- a/features/notebooks/20180523_pca_peterson.ipynb
+++ b/features/notebooks/20180523_pca_peterson.ipynb
@@ -885,7 +885,7 @@
    ],
    "source": [
     "with with_figsize(width=25/2, height=212/2):\n",
-    "    plot_many_spectros(t_max=30, recs=(recs\n",
+    "    plot_spectros(t_max=30, recs=(recs\n",
     "        [-50:]  # Avoid heavy plot\n",
     "    ))"
    ]
@@ -1001,9 +1001,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
