Spectro: compact .pkl (3x)

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -944,15 +944,70 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>k</th>\n      <th>type</th>\n      <th>pkl</th>\n      <th>sizeof</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td><div class=\"not-number\">melspectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>104</td>\n      <td>240</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td><div class=\"not-number\">spectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>128</td>\n      <td>240</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td><div class=\"not-number\">f</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>537</td>\n      <td>416</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td><div class=\"not-number\">t</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>22850</td>\n      <td>22728</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td><div class=\"not-number\">S</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>905500</td>\n      <td>905392</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td><div class=\"not-number\">audio</div></td>\n      <td><div class=\"not-number\">AudioSegment</div></td>\n      <td>1449453</td>\n      <td>56</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2378572</td>\n      <td>929072</td>\n    </tr>\n  </tbody>\n</table>",
+      "text/plain": "                   k          type      pkl  sizeof\n0  melspectro_kwargs          dict      104     240\n2     spectro_kwargs          dict      128     240\n3                  f       ndarray      537     416\n4                  t       ndarray    22850   22728\n5                  S       ndarray   905500  905392\n1              audio  AudioSegment  1449453      56\n0                NaN           NaN  2378572  929072"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Why are cache/_spectro pkl's so big? (~10x vs. audio.mp3)\n",
+    "from notebooks import *\n",
+    "x = joblib.load(f'{data_dir}/cache/joblib/sp14/model/_spectro_cache/1119e805a41591ce71c4ad3be00fb730/output.pkl')\n",
+    "(\n",
+    "    DF([\n",
+    "        OrderedDict(k=k, type=type(v).__name__, pkl=len(joblib_dumps(v)), sizeof=sys.getsizeof(v))\n",
+    "        for k, v in x.__dict__.items()\n",
+    "    ])\n",
+    "    .sort_values('pkl')\n",
+    "    .pipe(df_with_totals_row, numeric_only=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "melspectro_kwargs\naudio\nspectro_kwargs\nf\nt\nS\n"
+    },
+    {
+     "data": {
+      "text/plain": "2378239"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(joblib_dumps({\n",
+    "    puts(k): v\n",
+    "    for k, v in x.__dict__.items()\n",
+    "}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "_global (PYTHONSTARTUP)",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "_global (PYTHONSTARTUP)"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
