Spectro: compact .pkl (2x more) by loading audio from disk

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -941,22 +941,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Why are cache/_spectro pkl's so big? (~10x vs. audio.mp3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>k</th>\n      <th>type</th>\n      <th>pkl</th>\n      <th>sizeof</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td><div class=\"not-number\">melspectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>104</td>\n      <td>240</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td><div class=\"not-number\">spectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>128</td>\n      <td>240</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td><div class=\"not-number\">f</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>537</td>\n      <td>416</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td><div class=\"not-number\">t</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>22850</td>\n      <td>22728</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td><div class=\"not-number\">S</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>905500</td>\n      <td>905392</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td><div class=\"not-number\">audio</div></td>\n      <td><div class=\"not-number\">AudioSegment</div></td>\n      <td>1449453</td>\n      <td>56</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>2378572</td>\n      <td>929072</td>\n    </tr>\n  </tbody>\n</table>",
-      "text/plain": "                   k          type      pkl  sizeof\n0  melspectro_kwargs          dict      104     240\n2     spectro_kwargs          dict      128     240\n3                  f       ndarray      537     416\n4                  t       ndarray    22850   22728\n5                  S       ndarray   905500  905392\n1              audio  AudioSegment  1449453      56\n0                NaN           NaN  2378572  929072"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>k</th>\n      <th>type</th>\n      <th>pkl</th>\n      <th>sizeof</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td><div class=\"not-number\">duration_s</div></td>\n      <td><div class=\"not-number\">float</div></td>\n      <td>12</td>\n      <td>24</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td><div class=\"not-number\">path</div></td>\n      <td><div class=\"not-number\">str</div></td>\n      <td>38</td>\n      <td>77</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td><div class=\"not-number\">load</div></td>\n      <td><div class=\"not-number\">Load</div></td>\n      <td>108</td>\n      <td>754</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td><div class=\"not-number\">melspectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>220</td>\n      <td>368</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td><div class=\"not-number\">spectro_kwargs</div></td>\n      <td><div class=\"not-number\">dict</div></td>\n      <td>244</td>\n      <td>368</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td><div class=\"not-number\">f</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>537</td>\n      <td>416</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td><div class=\"not-number\">t</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>22850</td>\n      <td>22728</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td><div class=\"not-number\">S</div></td>\n      <td><div class=\"not-number\">ndarray</div></td>\n      <td>905500</td>\n      <td>905392</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>929509</td>\n      <td>930127</td>\n    </tr>\n  </tbody>\n</table>",
+      "text/plain": "                   k     type     pkl  sizeof\n3         duration_s    float      12      24\n2               path      str      38      77\n4               load     Load     108     754\n0  melspectro_kwargs     dict     220     368\n1     spectro_kwargs     dict     244     368\n5                  f  ndarray     537     416\n6                  t  ndarray   22850   22728\n7                  S  ndarray  905500  905392\n0                NaN      NaN  929509  930127"
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Why are cache/_spectro pkl's so big? (~10x vs. audio.mp3)\n",
     "from notebooks import *\n",
     "x = joblib.load(f'{data_dir}/cache/joblib/sp14/model/_spectro_cache/1119e805a41591ce71c4ad3be00fb730/output.pkl')\n",
     "(\n",
@@ -977,13 +983,13 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "melspectro_kwargs\naudio\nspectro_kwargs\nf\nt\nS\n"
+     "text": "melspectro_kwargs\nspectro_kwargs\npath\nduration_s\nload\nf\nt\nS\n"
     },
     {
      "data": {
-      "text/plain": "2378239"
+      "text/plain": "928982"
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
