notebooks/scratch: Add profile/pstats example

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1004,6 +1004,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "time": "1.281s"
+   },
+   "outputs": [],
+   "source": [
+    "# How to do hands-on profiling with profile/pstats\n",
+    "#   - Like %%prun but allows digging into the pstats result\n",
+    "import cProfile as profile\n",
+    "import pstats\n",
+    "from viz import *\n",
+    "def run():\n",
+    "    with contextlib.ExitStack() as stack:\n",
+    "        # stack.enter_context(cache_control(enabled=False))\n",
+    "        (xc_recs\n",
+    "            .query(\"species == 'SPTO'\")\n",
+    "            [:100]  # Faster dev\n",
+    "            .pipe(plot_thumbs, features, thumb_s=2, scale=dict(h=13), show=False)\n",
+    "        )\n",
+    "# %snakeviz run()\n",
+    "p = profile.Profile()\n",
+    "p.runcall(run)\n",
+    "stats = pstats.Stats(p)\n",
+    "stats.sort_stats('tottime').print_stats(20)\n",
+    "stats.sort_stats('cumtime').print_stats(20)\n",
+    "# stats.sort_stats('cumtime').print_stats('model', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\bplot_thumb\\b', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\bslice_spectro\\b', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\b_edit\\b', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\bplot_spectro\\b', 20)\n",
+    "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1011,9 +1046,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
