Add notebooks xc_parse_page_metadata + app_ideas_{4,5,6}

--- a/features/notebooks/20180808_ovr_subset_classes.ipynb
+++ b/features/notebooks/20180808_ovr_subset_classes.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from notebooks import *"
+    "from notebooks import *\n",
+    "print_sys_info()"
    ]
   },
   {
