display_with_audio: First pass (html+js) failed (df.to_html); switching to html+script

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1041,14 +1041,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# (Real version in bubo util.display_with_audio)\n",
+    "Javascript('''\n",
+    "\n",
+    "    \"Create container with onclick\"\n",
+    "    var container = document.createElement('div');\n",
+    "    container.innerHTML = `%(html)s`;\n",
+    "    container.onclick = ev => {\n",
+    "        var [audio] = container.getElementsByTagName('audio');\n",
+    "        if (ev.shiftKey) {\n",
+    "            \"Seek to start\"\n",
+    "            audio.currentTime = 0;\n",
+    "        } else if (!audio.paused) {\n",
+    "            \"Pause\"\n",
+    "            audio.pause();\n",
+    "        } else {\n",
+    "            \"Play, pausing all other bubo-user-audio's first\"\n",
+    "            Array.from(document.getElementsByClassName('bubo-user-audio')).forEach(audio => {\n",
+    "                if (audio.pause) audio.pause();\n",
+    "            });\n",
+    "            audio.play();\n",
+    "        }\n",
+    "    };\n",
+    "\n",
+    "    \"Append container to `element`, provided by jupyter as our output container\"\n",
+    "    element.appendChild(container);\n",
+    "\n",
+    "''' % dict(\n",
+    "    html='''\n",
+    "        <div>\n",
+    "            foo <br/>\n",
+    "            bar <br/>\n",
+    "            bar <br/>\n",
+    "            bar <br/>\n",
+    "            baz\n",
+    "            <audio preload='none' class=\"bubo-user-audio\">\n",
+    "                <source type=\"audio/mpeg\" src=\"file:///Users/danb/hack/bubo/data/recordings/UNK_20170819_092720.wav\" />\n",
+    "            </audio>\n",
+    "        </div>\n",
+    "    ''',\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "\n    <div class=\"foo\">\n        <h1>Foo</h1>\n    </div>\n    <script>\n        console.log('foo');\n    </script>\n",
+      "text/plain": "<IPython.core.display.HTML object>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML('''\n",
+    "    <div class=\"foo\">\n",
+    "        <h1>Foo</h1>\n",
+    "    </div>\n",
+    "    <script>\n",
+    "        console.log('foo');\n",
+    "    </script>\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python",
+   "display_name": "bubo-features (PYTHONSTARTUP)",
    "language": "python",
-   "name": "python"
+   "name": "bubo-features (PYTHONSTARTUP)"
   }
  },
  "nbformat": 4,
