notebooks/scratch.ipynb

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -1114,6 +1114,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Fri Aug 31 12:36:46 2018    /tmp/stats\n\n         13293 function calls (13178 primitive calls) in 23.745 seconds\n\n   Ordered by: cumulative time\n   List reduced from 414 to 20 due to restriction <20>\n\n   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n        1    0.000    0.000   23.745   23.745 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/flask/app.py:843(run)\n        1    0.000    0.000   23.738   23.738 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:678(run_simple)\n        1    0.000    0.000   23.735   23.735 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:766(inner)\n        1    0.000    0.000   21.007   21.007 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:649(make_server)\n        1    0.000    0.000   21.007   21.007 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:565(__init__)\n        1    0.000    0.000   21.006   21.006 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/socketserver.py:446(__init__)\n        1    0.000    0.000   21.005   21.005 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/http/server.py:134(server_bind)\n        1    0.000    0.000   21.005   21.005 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/socket.py:660(getfqdn)\n        1   21.005   21.005   21.005   21.005 {built-in method _socket.gethostbyaddr}\n        1    0.000    0.000    2.728    2.728 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:609(serve_forever)\n        1    0.000    0.000    2.727    2.727 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/socketserver.py:219(serve_forever)\n       10    0.000    0.000    2.723    0.272 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/selectors.py:365(select)\n       10    2.723    0.272    2.723    0.272 {method 'poll' of 'select.poll' objects}\n     11/3    0.000    0.000    0.011    0.004 <frozen importlib._bootstrap>:966(_find_and_load)\n     11/3    0.000    0.000    0.011    0.004 <frozen importlib._bootstrap>:936(_find_and_load_unlocked)\n      9/3    0.000    0.000    0.010    0.003 <frozen importlib._bootstrap>:651(_load_unlocked)\n      9/3    0.000    0.000    0.010    0.003 <frozen importlib._bootstrap_external>:672(exec_module)\n      9/3    0.000    0.000    0.009    0.003 <frozen importlib._bootstrap>:211(_call_with_frames_removed)\n      9/3    0.000    0.000    0.009    0.003 {built-in method builtins.exec}\n        1    0.000    0.000    0.006    0.006 /Users/danb/miniconda3/envs/bubo-features/lib/python3.6/site-packages/werkzeug/serving.py:37(<module>)\n\n\n"
+    }
+   ],
+   "source": [
+    "import pstats\n",
+    "stats = pstats.Stats('/tmp/stats')\n",
+    "# stats.sort_stats('tottime').print_stats(20)\n",
+    "stats.sort_stats('cumtime').print_stats(20)\n",
+    "# stats.sort_stats('cumtime').print_stats('model', 20)\n",
+    "# stats.sort_stats('cumtime').print_callees(r'\\bplot_thumb\\b', 20)\n",
+    "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
