WIP: sqlite, audio_export_kwargs, mp4 [checkpoint before overhauling rec.id]

--- a/features/notebooks/scratch.ipynb
+++ b/features/notebooks/scratch.ipynb
@@ -342,7 +342,7 @@
     "##\n",
     "# TODO Under par: only ~15-20% total cpu on n1-standard-16\n",
     "recs_paths_all = load.recs_paths(datasets=['xc'])\n",
-    "# load.audio_to_wav(recs_paths_all)"
+    "# load.audio_transcode(recs_paths_all)"
    ]
   },
   {
@@ -851,9 +851,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bubo-features (PYTHONSTARTUP)",
+   "display_name": "python",
    "language": "python",
-   "name": "bubo-features (PYTHONSTARTUP)"
+   "name": "python"
   }
  },
  "nbformat": 4,
